--- a/Assignment5/about.html
+++ b/Assignment5/about.html
@@ -1,21 +1,23 @@
-# About My Website Ideas ##
+</h1>About My Website Ideas</h1>
 
 <hr />
 
-## Cooking Blog ##
+<h3> Cooking Blog </h3>
 
-This idea would be fun because I want to share my recipes with everyone.
-
-<hr />
-
-## Travel Blog ##
-
-I want to shoow and tell people recommendations for when they travel.
+<p>This idea would be fun because I want to share my recipes with everyone.</p>
 
 <hr />
 
-## Business Website ##
+<h3> Travel Blog </h3>
 
-I want to be able to tell people about my business before they come to visit. 
+<p>I want to shoow and tell people recommendations for when they travel.</p>
+
+<hr />
+
+</h3> Business Website</h3>
+
+<p>want to be able to tell people about my business before they come to visit.</p> 
+
+<br />
 
 <a href="index.html">Return To Website Ideas</a>
