--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -12,7 +12,7 @@
 
 <h3>Travel Blog</h3>
 
-<p>second website idea would be a travel blog. I love to travel and fortunately have been many places. The purpose of this website would be to recommend places for people to visit. The website would include pictures as well as summaries of each location.</p>
+<p>My second website idea would be a travel blog. I love to travel and fortunately have been many places. The purpose of this website would be to recommend places for people to visit. The website would include pictures as well as summaries of each location.</p>
 
 <img src="https://cdn.britannica.com/06/96306-050-DFE8AFDC/Khao-Tapu-Ao-Phang-na-Thailand-National-Park.jpg"/>
 
