--- a/Assignment5/about.html
+++ b/Assignment5/about.html
@@ -1,4 +1,4 @@
-</h1>About My Website Ideas</h1>
+<h1>About My Website Ideas</h1>
 
 <hr />
 
@@ -14,9 +14,9 @@
 
 <hr />
 
-</h3> Business Website</h3>
+<h3> Business Website</h3>
 
-<p>want to be able to tell people about my business before they come to visit.</p> 
+<p>I want to be able to tell people about my business before they come to visit.</p> 
 
 <br />
 
