--- a/Assignment5/about.html
+++ b/Assignment5/about.html
@@ -10,7 +10,7 @@
 
 <h3> Travel Blog </h3>
 
-<p>I want to shoow and tell people recommendations for when they travel.</p>
+<p>I want to show and tell people recommendations for when they travel.</p>
 
 <hr />
 
