--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -18,7 +18,7 @@
 
 <hr />
 
-<h3>Website</h3>
+<h3>Business Website</h3>  
 
 <p>I'm hoping to open up a coffee shop one day and in order to gather more customers, I would need to make a website for the shop. </br> The website would include the menu items and nutritional facts of the drinks and food. The tone would be playful and the website would have a calming aesthetic.</p>
 
