--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -11,3 +11,11 @@
     <li>Blues</li>
     <li>Oranges</li>
 </ol>
+
+<hr />
+
+<h2><b>Playful Aspects</b></h2>
+
+<p>I want to add funny quotes about cooking to my website so that viewers keeping coming back and don't feel stressed about messing up a recipe.</p>
+
+<q><i>Don't be afraid to take whisks-Google</i></q>
