--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -22,6 +22,15 @@
 
 <q><i>Don't be afraid to take whisks</i>-Google</q>
 
+<hr />
+
+<h2><b>Useful Tools</b></h2>
+
+<p>All cooks need useful tools in the kitchen, so I am linking must have kitchen essentials.</p>
+
+<a href="https://www.ambitiouskitchen.com/our-favorite-kitchen-essentials/">Tools</a>
+
+<br />
 <br />
 
 
