--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -30,6 +30,12 @@
 
 <a href="https://www.ambitiouskitchen.com/our-favorite-kitchen-essentials/">Tools</a>
 
+<hr />
+
+<h2><b>What does it mean to cook?</b></h2>
+
+<p>Cooking <dfn>also known as cookery or professionally as the culinary arts, is the art, science and craft of using heat to make food more palatable, digestible, nutritious, or safe.</dfn></p>
+
 <br />
 <br />
 
