--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Cooking With Kate</title>
+    <style>
+        body{background-color: cadetblue;}
+    </style>
+
 <h1>Cooking Blog</h1>
 
 <hr />
