--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Cooking With Kate</title>
     <style>
-        body{background-color: rbg(95, 158, 160)}
+        body{background-color: rgb(153, 195, 153)}
     </style>
 
 <h1>Cooking Blog</h1>
