--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -5,6 +5,7 @@
     <style>
         body {background-color: rgb(153, 195, 153)}
         h1 {color: rgb(85, 107, 47)}
+        h2 {color: rgb(0, 100, 0)}
     </style>
 
 <h1>Cooking Blog</h1>
