--- a/WebDesignHomework/Assignment6/index.html
+++ b/WebDesignHomework/Assignment6/index.html
@@ -8,7 +8,7 @@
         h2 {color: rgb(85, 107, 47)}
     </style>
 
-<h1>Cooking Blog</h1>
+<h1 style="text-align: center;">Cooking Blog</h1>
 
 <hr />
 
