--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -13,14 +13,14 @@
     <a style="float: right; padding: 10px" href="index.html">HOME</a>
     <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
 
-    <h1 style="text-align: left;">Cooking With Kate!</h1>
-    <img src="https://i.pinimg.com/564x/a3/f5/ae/a3f5aed4ce4034ad0d2fada0056cae64.jpg" style="width: 30%">
+    <h1 style="text-align: center;">Cooking With Kate!</h1>
+    <img src="https://i.pinimg.com/564x/a3/f5/ae/a3f5aed4ce4034ad0d2fada0056cae64.jpg" style="width: 30%" style="height: 30%;">
         
 <hr />
 
 <h2><b>Simple Favorites!</b></h2>
 
-<img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" style="width: 30%;">
+<img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" style="width: 30%;" style="height: 30%;">
 
 
 
