--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -20,7 +20,7 @@
 
 <h2 style="text-align: center;"><b>Simple Recipes!</b></h2>
 
-<img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" style="width: 30%;" style="height: 30%;">
+<img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" style="width: 30%;" style="height: 30%;" style="float: right; margin-left: 10px;"/>
 
 
 
