--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -14,11 +14,14 @@
     <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
+
+    <p style="text-align: right;">These simple and fresh recipes are perfect to make for parties or to make by yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
+
     <img src="https://i.pinimg.com/564x/a3/f5/ae/a3f5aed4ce4034ad0d2fada0056cae64.jpg" style="width: 30%" style="height: 30%;">
         
 <hr />
 
-<h2 style="text-align: center;"><b>Simple Recipes!</b></h2>
+<h2 style="text-align: center;"><b>Simple and Fresh Recipes!</b></h2>
 
 <img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" style="width: 30%;" style="height: 30%;" style="float: right; margin-left: 10px;"/>
 
