--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -15,7 +15,7 @@
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
 
-    <p style="text-align: right;">These simple and fresh recipes are perfect to make for parties or to make by yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
+    <p style="text-align: center;">These simple and fresh recipes are perfect to make for parties or to make by yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
 
     <img src="https://i.pinimg.com/564x/a3/f5/ae/a3f5aed4ce4034ad0d2fada0056cae64.jpg" style="width: 30%" style="height: 30%;">
         
@@ -23,7 +23,7 @@
 
 <h2 style="text-align: center;"><b>Simple and Fresh Recipes!</b></h2>
 
-<img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" style="width: 30%;" style="height: 30%;" style="float: right; margin-left: 10px;"/>
+<img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" width="50%" style="float: right; margin-left: 10px;"/>  
 
 
 
