--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -25,6 +25,19 @@
 
 <img src="https://i.pinimg.com/564x/89/54/89/8954899c3a56fab2b5ad62cc89ab25b9.jpg" width="50%" style="float: right; margin-left: 10px;"/>  
 
+<h2 style="width: 45%; float: left">Parmesan Chopped Salad</h2>  
+    <p>We're starting off the blog with a delicious and refreshing salad. This recipe is so easy to make and can be paired with any main dish to create the perfect side.</p>
 
+        <h3>Ingredients:</h3>
+            <ul>
+                <li><strong>Romaine lettuce:</strong> 1 to 2 hearts</li>
+                <li><strong>Shallots:</strong> 2, thinly sliced</li>
+                <li><strong>Lemons:</strong> zest and juice</li>   
+                <li><strong>Extra virgin olive oil</strong> 1/4 cup</li>  
+                <li><strong>Salt and pepper</strong> 1/2 teaspoons</li>  
+                <li><strong>Crushed red pepper flakes</strong> 1/4 teaspoon, optional</li>  
+                <li><strong>Paremesan cheese</strong> 1 cup finely grated</li>  
+                <li><strong></strong></li>  
+            </ul>
 
 
