--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -15,9 +15,9 @@
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
 
-    <p style="text-align: center;">These simple and fresh recipes are perfect to make for parties or to make by yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
-
     <img src="https://i.pinimg.com/564x/a3/f5/ae/a3f5aed4ce4034ad0d2fada0056cae64.jpg" style="width: 30%" style="height: 30%;">
+
+    <p style="text-align: right;">These simple and fresh recipes are perfect to make for parties or to make by yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
         
 <hr />
 
@@ -27,7 +27,7 @@
 
 <h2 style="width: 45%; float: left">Parmesan Chopped Salad</h2>  
     
-<p>We're starting off the blog with a delicious and refreshing salad. This recipe is so easy to make and can be paired with any main dish to create the perfect side.</p>
+<p style="text-align: left;">We're starting off the blog with a delicious and refreshing salad. This recipe is so easy to make and can be paired with any main dish to create the perfect side.</p>
 
 
 
@@ -36,10 +36,10 @@
                 <li><strong>Romaine lettuce:</strong> 1 to 2 hearts</li>
                 <li><strong>Shallots:</strong> 2, thinly sliced</li>
                 <li><strong>Lemons:</strong> zest and juice</li>   
-                <li><strong>Extra virgin olive oil</strong> 1/4 cup</li>  
-                <li><strong>Salt and pepper</strong> 1/2 teaspoons</li>  
-                <li><strong>Crushed red pepper flakes</strong> 1/4 teaspoon, optional</li>  
-                <li><strong>Paremesan cheese</strong> 1 cup finely grated</li>  
+                <li><strong>Extra virgin olive oil:</strong> 1/4 cup</li>  
+                <li><strong>Salt and pepper:</strong> 1/2 teaspoons</li>  
+                <li><strong>Crushed red pepper flakes:</strong> 1/4 teaspoon, optional</li>  
+                <li><strong>Paremesan cheese:</strong> 1 cup finely grated</li>  
             </ul>
 
 
