--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -7,8 +7,6 @@
         h1 {color: rgb(0, 100, 0)}
         h2 {color: rgb(85, 107, 47)}
     </style>
-    </head>
-    <body>
 
     <a style="float: right; padding: 10px" href="index.html">HOME</a>
     <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
@@ -18,7 +16,8 @@
     <p style="text-align: left;">These simple and fresh recipes are perfect to make for parties or to make by yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
 
     <img src="https://i.pinimg.com/564x/a3/f5/ae/a3f5aed4ce4034ad0d2fada0056cae64.jpg" style="width: 30%" style="height: 30%;">
-        
+    <img src="https://i.pinimg.com/564x/5f/1f/eb/5f1feb4096982df3407ca5cf95c8d4a4.jpg" style="width: 30%" style="height: 30%;">
+    <img src="https://i.pinimg.com/564x/ec/7e/6a/ec7e6a0a67f967d2b30e7b97ecae7877.jpg" style="width: 30%" style="height: 30%;">
 <hr />
 
 <h2 style="text-align: center;"><b>Simple and Fresh Recipes!</b></h2>  
