--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -47,3 +47,10 @@
                 <li>To make the parmesan chopped salad: Chop the romaine lettuce with a sharp knife, put in your salad spinner or a large bowl, rinse and drain very well, or pat dry.</li>
                 <li>Add the lettuce, shallots, parmesan, and lemon zest to a large salad bowl. Combine kosher salt, black pepper, lemon juice, and olive oil in a jar and pour over the salad. Toss the parmesan salad to combine before serving. Enjoy!</li>
             </ol>
+    <hr />
+
+    <blockquote>
+        "Don't be afraid to take whisks."
+        <br />
+        — Google
+    </blockquote>
