--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -8,7 +8,7 @@
         h2 {color: rgb(85, 107, 47)}
     </style>
 
-    <a style="float: right; padding: 10px" href="index.html">HOME</a>
+    <a style="float: right; padding: 10px" href="tools.html">TOOLS</a>
     <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
