--- a/WebDesignHomework/Assignment7/tools.html
+++ b/WebDesignHomework/Assignment7/tools.html
@@ -12,3 +12,35 @@
     <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
+
+
+
+    <h3 style="text-align: center;">Cooking Tools</h3>
+  
+  <table>
+    <tr>
+      <th></th>
+      <th scope="col">Tools</th>
+      <th scope="col">Status</th>
+    </tr>
+    <tr>
+      <th scope="row">Knife</th>
+      <td>Useful for chopping ingredients</td>
+      <td><input type="checkbox" id="task1"></td>
+    </tr>
+    <tr>
+      <th scope="row">Chopping board</th>
+      <td>To keep everything on a clean surface</td>
+      <td><input type="checkbox" id="task2"></td>
+    </tr>
+    <tr>
+      <th scope="row">Cheese grater</th>
+      <td>To grate the paremesan cheese</td>
+      <td><input type="checkbox" id="task3"></td>
+    </tr>
+    <tr>
+      <th scope="row">Measuring cups</th>
+      <td>To measure dry ingredients</td>
+      <td><input type="checkbox" id="task4"></td>
+    </tr>
+  </table>
