--- a/WebDesignHomework/Assignment7/tools.html
+++ b/WebDesignHomework/Assignment7/tools.html
@@ -7,24 +7,24 @@
 
     body {background-color: rgb(153, 195, 153)}
     h1 {color: rgb(0, 100, 0)}
-    h2 {color: rgb(85, 107, 47)}    
+    h3 {color: rgb(85, 107, 47)}    
     table {
       width: 100%;
       border-collapse: collapse;
     }
     th, td {
-      border: 1px solid #ddd;
+      border: 1px solid #014f20;
       padding: 8px;
     }
     th {
-      background-color: #f4a460;
+      background-color: #c9ffd4;
       color: white;
     }
     tr:nth-child(even) {
-      background-color: #f9f9f9;
+      background-color: #ddfbe1;
     }
   </style>
-  
+
     <a style="float: right; padding: 10px" href="tools.html">TOOLS</a>
     <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
 
