--- a/WebDesignHomework/Assignment7/tools.html
+++ b/WebDesignHomework/Assignment7/tools.html
@@ -17,11 +17,11 @@
       padding: 8px;
     }
     th {
-      background-color: #c9ffd4;
+      background-color: #52925f;
       color: white;
     }
     tr:nth-child(even) {
-      background-color: #ddfbe1;
+      background-color: #afd5b5;
     }
   </style>
 
