--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -54,3 +54,5 @@
         <br />
         — Google
     </blockquote>
+
+    <p>Check out our <a href="tools.html">Cooking Tools</a> page for some useful kitchen supplies! See you next week!</p>
