--- a/WebDesignHomework/Assignment7/tools.html
+++ b/WebDesignHomework/Assignment7/tools.html
@@ -78,3 +78,5 @@
     
     <input type="submit" value="Submit Suggestion" />
  </form>
+
+ <p>Head back to our <a href="recipes.html">Recipes</a> page for more recipes!</p>
