--- a/WebDesignHomework/Assignment7/recipes.html
+++ b/WebDesignHomework/Assignment7/recipes.html
@@ -13,7 +13,7 @@
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
 
-    <p style="text-align: left;">These simple and fresh recipes are perfect to make for parties or to make by yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
+    <p style="text-align: left;">These simple and fresh recipes are perfect to make for parties or to make for yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
 
     <img src="https://i.pinimg.com/564x/a3/f5/ae/a3f5aed4ce4034ad0d2fada0056cae64.jpg" style="width: 30%" style="height: 30%;">
     <img src="https://i.pinimg.com/564x/5f/1f/eb/5f1feb4096982df3407ca5cf95c8d4a4.jpg" style="width: 30%" style="height: 40%;">
@@ -56,3 +56,4 @@
     </blockquote>
 
     <p>Check out our <a href="tools.html">Cooking Tools</a> page for some useful kitchen supplies! See you next week!</p>
+
