--- a/WebDesignHomework/Assignment8/index.html
+++ b/WebDesignHomework/Assignment8/index.html
@@ -9,7 +9,8 @@
     </style>
 
     <a style="float: right; padding: 10px" href="tools.html">TOOLS</a>
-    <a style="float: right; padding: 10px" href="recipes.html">HOME</a>
+    <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
+    <a style="float: right; padding: 10px" href="index.html">HOME</a>
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
 
