--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -8,16 +8,11 @@
         h2 {color: rgb(85, 107, 47)}
     </style>
 
-<h1 style="text-align: center;">Cooking Blog</h1>
+    <a style="float: right; padding: 10px" href="tools.html">TOOLS</a>
+    <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
+    <a style="float: right; padding: 10px" href="index.html">HOME</a>
 
-<nav>
-    <a href="index.html">HOME</a>
-    <a href="tools.html">TOOLS</a>
-    <a href="recipes.html">RECIPES</a>
-</nav>
-<h1>
-    <a id="logo" href="index.html">Cooking With Kate</a>
-</h1>
+    <h1 style="text-align: center;">Cooking With Kate!</h1>
 
 <!-- Hero video -->
 <div id="hero-video">
