--- a/WebDesignHomework/Assignment8/tools.html
+++ b/WebDesignHomework/Assignment8/tools.html
@@ -27,6 +27,7 @@
 
     <a style="float: right; padding: 10px" href="tools.html">TOOLS</a>
     <a style="float: right; padding: 10px" href="index.html">HOME</a>
+    <a style="float: right; padding: 10px" href="recipes.html">RECIPES</a>
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
 
