--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -14,6 +14,90 @@
 
     <h1 style="text-align: center;">Cooking With Kate!</h1>
 
+    <style>
+        #logo {
+            text-align: left;
+            text-decoration: none;
+            color:rgb(114, 20, 50)
+        }
+        nav {
+            float: right; /* Tells the nav items to float to the right of its container */
+            padding: 0 10px 10px 10px;
+        } 
+        nav a {
+            text-decoration: none; /* Removes the underline for each link */
+            padding: 10px; /* Adds spacing around each link */
+            color: black; /* Set a color for the text, if needed */
+            display: inline-block; /* Ensures the links are treated like blocks within the nav */
+        }   
+        body {
+            background-color: rgb(255, 237, 239);
+        }
+        h1 {
+            color: rgb(128, 0, 73); /* Sets the text's color */
+        }    
+        h2, p {
+            color: rgb(103, 14, 51);
+            text-align: center;
+        }
+        h3 {
+            color: rgb(128, 0, 73);
+            text-align: center;
+        }
+        .recipe-section {
+            width: 90%;
+            margin: 0 auto; /* Centers block-level elements, like divs, horizontally - 0 is for the top and bottom values - auto is for the left and right values - auto allows the browser to adjust the space on the left and right automatically */
+            padding: 0 20px 20px 20px; /* Places padding around all sides except the top */
+        }
+        .recipe {
+            width: 30%; /* Each recipe takes up 30% of the width */
+            float: left;
+            margin: 1.66%; /* Spacing between the recipes */
+            padding: 15px;
+            background-color: #f2fcff;
+            box-sizing: border-box; /* Ensures padding and border are included in width */
+            text-align: center; /* Centers text and images in the recipe div */
+        }
+        .recipe img {
+            width: 100%; /* Makes images full width of container */
+            height: auto;
+        }
+        .special-note {
+            font-weight: bold;
+        }
+        .clear {
+            clear: both; /* Ensures the following content doesn't overlap with the floated elements above */
+        }
+        .media-section {
+            width: 90%;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .audio-section {
+            width: 30%; /* Audio takes 1/3 of the width */
+            height: 350px;
+            float: left;
+            margin: 1.66%;
+            padding: 15px;
+            background-color: #f2fcff;
+            box-sizing: border-box;
+            text-align: center;
+        }
+        .timer-section {
+            width: 63%; /* Timer takes 2/3 of the width */
+            height: 350px;
+            float: left;
+            margin: 1.66%;
+            padding: 15px;
+            background-color: #f2fcff;
+            box-sizing: border-box;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+
 <!-- Hero video -->
 <div id="hero-video">
     <video autoplay muted loop style="width: 100%; height: auto;">
