--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -50,11 +50,11 @@
             padding: 0 20px 20px 20px; /* Places padding around all sides except the top */
         }
         .recipe {
-            width: 30%; /* Each recipe takes up 30% of the width */
+            width: 25%; /* Each recipe takes up 25% of the width */
             float: left;
             margin: 1.66%; /* Spacing between the recipes */
             padding: 15px;
-            background-color: #f2fcff;
+            background-color: #e6fbee;
             box-sizing: border-box; /* Ensures padding and border are included in width */
             text-align: center; /* Centers text and images in the recipe div */
         }
