--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -153,5 +153,13 @@
 
         <div class="clear"></div> <!-- Clears the float after recipe items -->
     </div>
+<!-- Cooking Timer iframe Section -->
+<div class="media-item timer-section">
+    <h3>Set a Cooking Timer</h3>
+    <iframe src="https://www.online-timer.net/" width="100%" height="250"></iframe>
+</div>
+</div>
+
+<div class="clear"></div> <!-- Clears float after the media items -->
 
 
