--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -60,7 +60,7 @@
         }
         .recipe img {
             width: 100%; /* Makes images full width of container */
-            height: auto;
+            height: 1in;
         }
         .special-note {
             font-weight: bold;
