--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -152,6 +152,19 @@
         </div>
 
         <div class="clear"></div> <!-- Clears the float after recipe items -->
+    
+<!-- Audio section -->
+<div class="media-item audio-section">
+    <h3>Relax and Listen While You Cook</h3>
+    <img src="images/autumn-leaf-banner-hero.jpg" alt="Leaf banner" style="width: 90%; height: auto; max-height: 150px; margin-bottom: 10px;">
+    <!-- Audio Element -->        
+    <audio controls loop>
+        <source src="audio/floating-piano-melodies.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://freesound.org/people/NikoSardas/sounds/456797/" target="_blank">UNIVERSFIELD</a> — Licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC Attribution 4.0</a></p>
+</div>
+
     </div>
 <!-- Cooking Timer iframe Section -->
 <div class="media-item timer-section">
