--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -162,7 +162,7 @@
         <source src="audio/floating-piano-melodies.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://freesound.org/people/NikoSardas/sounds/456797/" target="_blank">UNIVERSFIELD</a> — Licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC Attribution 4.0</a></p>
+    <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://freesound.org/people/NikoSardas/sounds/456797/" target="_blank">Niko Sardas</a></p>
 </div>
 
     </div>
