--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -158,11 +158,8 @@
     <h3>Relax and Listen While You Cook</h3>
     <img src="images/autumn-leaf-banner-hero.jpg" alt="Leaf banner" style="width: 90%; height: auto; max-height: 150px; margin-bottom: 10px;">
     <!-- Audio Element -->        
-    <audio controls loop>
-        <source src="audio/floating-piano-melodies.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://freesound.org/people/NikoSardas/sounds/456797/" target="_blank">Niko Sardas</a></p>
+<audio controls loop
+        <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://freesound.org/people/NikoSardas/sounds/456797/" target="_blank">Niko Sardas</a></p>
 </div>
 
     </div>
