--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -156,7 +156,7 @@
 <!-- Audio section -->
 <div class="media-item audio-section">
     <h3>Relax and Listen While You Cook</h3>
-    <img src="images/autumn-leaf-banner-hero.jpg" alt="Leaf banner" style="width: 90%; height: auto; max-height: 150px; margin-bottom: 10px;">
+    <img src="https://images.squarespace-cdn.com/content/v1/651f3a38b2f69811ea35c9f1/1696545461736-BS7IN3O2T6QVPPQQE8S4/Cover.jpg" alt="cooking impage" style="width: 90%; height: auto; max-height: 150px; margin-bottom: 10px;">
     <!-- Audio Element -->        
 <audio controls loop
         <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://freesound.org/people/NikoSardas/sounds/456797/" target="_blank">Niko Sardas</a></p>
