--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -100,7 +100,7 @@
 
 <!-- Hero video -->
 <div id="hero-video">
-    <video autoplay muted loop style="width: 50%; height: auto;">
+    <video autoplay muted loop style="width: 100%; height: auto;">
     <source src="https://v.ftcdn.net/02/19/45/01/240_F_219450108_n8DvHEv84exEWLUyCJoqSk8rhs85Rql5_ST.mp4" type="video/mp4">
     </video>
 </div>
@@ -172,4 +172,9 @@
 
 <div class="clear"></div> <!-- Clears float after the media items -->
 
-
+<!-- Escape character example -->
+<footer>
+    <p>&copy; 2024 Cooking With Kate • Enjoy Cooking</p>
+</footer>
+</body>
+</html>
