--- a/WebDesignHomework/Assignment8/recipes.html
+++ b/WebDesignHomework/Assignment8/recipes.html
@@ -152,7 +152,10 @@
         </div>
 
         <div class="clear"></div> <!-- Clears the float after recipe items -->
-    
+<!-- Escape character example -->
+<!-- Media section -->
+<h1 style="text-align: center;">Media</h1>
+<div class="media-section">  
 <!-- Audio section -->
 <div class="media-item audio-section">
     <h3>Relax and Listen While You Cook</h3>
