--- a/WebDesignHomework/Assignment9/aboutme.html
+++ b/WebDesignHomework/Assignment9/aboutme.html
@@ -8,4 +8,4 @@
         h2 {color: rgb(85, 107, 47)}
     </style>
 
-<h1 style="text-align: center;">Cooking Blog</h1>
+<h1 style="text-align: center;">Cooking With Kate</h1>
