--- a/WebDesignHomework/Assignment9/aboutme.html
+++ b/WebDesignHomework/Assignment9/aboutme.html
@@ -13,7 +13,7 @@
 <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
     <a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
 
-    <h2 style="text-align: center;">Get To Know Me!</h2>
+    <h2 style="text-align: left;">Get To Know Me!</h2>
 
     <p style="text-align: left;">Welcome to my blog! This is where I post delicious and easy recipes for everyone to recreate. I first started cooking when I was very young. I always loved watching my mom and grandmas move throughout the kitchen, cooking my favorite meals. That's what started my love for cooking. I've learned through trial and error throughout the years making unique recipes and following along other cooking blogs and cookbooks. I hope you enjoy this blog and cooking as much as I do and I can't wait to see what you make!</p>
 
