--- a/WebDesignHomework/Assignment9/aboutme.html
+++ b/WebDesignHomework/Assignment9/aboutme.html
@@ -8,7 +8,7 @@
         h2 {color: rgb(85, 107, 47)}
     </style>
 
-<h1 style="text-align: center;">Cooking With Kate</h1>
+<h1 style="text-align: center;">Cooking With Kate!</h1>
 
 <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
     <a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
