--- a/WebDesignHomework/Assignment9/gallery.html
+++ b/WebDesignHomework/Assignment9/gallery.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cooking With Kate</title>
+<title>Cooking With Kate!</title>
     <style>
         body {background-color: rgb(153, 195, 153)}
         h1 {color: rgb(0, 100, 0)}
         h2 {color: rgb(85, 107, 47)}
     </style>
 
-<h1 style="text-align: center;">Cooking With Kate</h1>
+<h1 style="text-align: center;">Cooking With Kate!</h1>
