--- a/WebDesignHomework/Assignment9/aboutme.html
+++ b/WebDesignHomework/Assignment9/aboutme.html
@@ -13,10 +13,12 @@
 <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
     <a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
 
+    <hr /> 
+
     <h2 style="text-align: left;">Get To Know Me!</h2>
 
     <p style="text-align: left;">Welcome to my blog! This is where I post delicious and easy recipes for everyone to recreate. My name is Kate! I grew up in Orange County California with my mom, dad, and older sister. We all love going to fun restaurants together, which is where I get a lot of ideas for my own cooking. I first started cooking when I was very young. I always loved watching my mom and grandmas move throughout the kitchen, cooking my favorite meals. That's what started my love for cooking. I've learned through trial and error throughout the years making unique recipes and following along other cooking blogs and cookbooks. I hope you enjoy this blog and cooking as much as I do and I can't wait to see what you make!</p>
 
-    <img src="https://share.icloud.com/photos/07caC2-QrKNiihpusba7VN8wg" style="width: 30%" style="height: 30%;">
+    <img src="file:///Users/katemonette/Pictures/Photos%20Library.photoslibrary/resources/derivatives/C/CA0EEE8E-CD96-4C72-879F-F5368C1917EA_1_105_c.jpeg" style="width: 30%" style="height: 30%;">
 
     
