--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cooking With Kate!</title>
+<title>Cooking With Kate</title>
     <style>
         body {background-color: rgb(153, 195, 153)}
         h1 {color: rgb(0, 100, 0)}
@@ -9,3 +9,31 @@
     </style>
 
 <h1 style="text-align: center;">Cooking With Kate!</h1>
+
+<a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
+    <a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
+
+    <hr />
+
+    <h2 style="text-align: left;">How to Make a Dilly White Bean Cucumber Salad
+    </h2>
+
+    <p style="text-align: left;">This is one of my very favorite recipes I have made! The salad is so refreshing and perfect for a light, summery side dish!</p>
+
+    <h2 style="text-align: left;">Materials and Ingredients Needed</h2>
+
+    <ol>
+        <li>Big mixing or salad bowl</li>
+        <li>Knife</li>
+        <li>1 garlic clove</li>
+        <li>Juice of a small lemon</li>
+        <li>1 tbls of olive oil</li>
+        <li>1 tsp dijon mustard</li>
+        <li>1/2 tsp salt and black pepper</li>
+        <li>2 15 oz cans of white beans (drained)</li>
+        <li>2 persian cucumbers</li>
+        <li>Fresh dill (chopped)</li>
+        <li>2 green onions (sliced)</li>
+    </ol>
+    
+    <img src="file:///Users/katemonette/Pictures/Photos%20Library.photoslibrary/resources/derivatives/C/CA0EEE8E-CD96-4C72-879F-F5368C1917EA_1_105_c.jpeg" style="width: 30%" style="height: 30%;">
