--- a/WebDesignHomework/Assignment9/gallery.html
+++ b/WebDesignHomework/Assignment9/gallery.html
@@ -9,3 +9,9 @@
     </style>
 
 <h1 style="text-align: center;">Cooking With Kate!</h1>
+
+<footer>
+    <p>&copy; 2024 Cooking With Kate • Enjoy Cooking</p>
+</footer>
+</body>
+</html>
