--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -39,3 +39,9 @@
     </ol>
     
     <img src="file:///Users/katemonette/Pictures/Photos%20Library.photoslibrary/resources/derivatives/C/CA0EEE8E-CD96-4C72-879F-F5368C1917EA_1_105_c.jpeg" style="width: 30%" style="height: 30%;">
+
+    <footer>
+        <p>&copy; 2024 Cooking With Kate • Enjoy Cooking</p>
+    </footer>
+    </body>
+    </html>
