--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -47,14 +47,17 @@
 <hr />            
 
 <h2 style="text-align: left;">Instructions</h2>
-    <p style="text-align: left;">,<b>Step 1: Make the Vinaigrette</b>
-        Add the garlic, lemon juice, oil, mustard, salt, and pepper to a small bowl. Whisk well and set aside for 5 minutes while you prep the remaining ingredients; the lemon juice will mellow out the flavor of the raw garlic.
+        <p style="text-align: left;">,<b>Step 1: Make the Vinaigrette</b>
+        Add the garlic, lemon juice, oil, mustard, salt, and pepper to a small bowl. Whisk well and set aside for 5 minutes while you prep the remaining ingredients; the lemon juice will mellow out the flavor of the raw garlic.</p>
         
         <p style="text-align: left;"></p><b>Step 2: Make the Salad</b> 
-        Add the beans, cucumber, radishes, dill, and green onions to a large bowl. Add the dressing to the bowl and then mix well until evenly incorporated. Season with additional salt and pepper to taste, if necessary.
+        Add the beans, cucumber, radishes, dill, and green onions to a large bowl. Add the dressing to the bowl and then mix well until evenly incorporated. Season with additional salt and pepper to taste, if necessary.</p>
         
         <p style="text-align: left;"></p><b>Step 3: Serve</b>
-        Serve immediately, or store in the fridge for 15 to 30 minutes before serving, to allow the flavors to combine. more. Leftovers will keep in the fridge for up to 5 days.!</p>
+        Serve immediately, or store in the fridge for 15 to 30 minutes before serving, to allow the flavors to combine. more. Leftovers will keep in the fridge for up to 5 days.</p>
+
+<h2 style="text-align: left;">Recipe Notes: White Beans</h2>
+        <p style="text-align: left;">I made this salad with Great Northern Beans, which have a soft and creamy texture. Cannelini or Navy Beans will also give you a similar result. This salad can also be made with chickpeas, but will not be as creamy.</p>
 
   <form action="mailto:kate.monette@umconnect.umt.edu" method="post" enctype="text/plain">
     <h3 style="text-align: center;">Suggest a Recipe</h3>
