--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -80,7 +80,7 @@
     <input type="submit" value="Submit Suggestion" />
  </form>
 
-    <footer>
+    <footer style="text-align: center;">
         <p>&copy; 2024 Cooking With Kate • Enjoy Cooking</p>
     </footer>
     </body>
