--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -15,16 +15,16 @@
 
     <hr />
 
-    <h2 style="text-align: left;">How to Make a Dilly White Bean Cucumber Salad
+    <h2 style="text-align: center;">How to Make a Dilly White Bean Cucumber Salad
     </h2>
 
     <p style="text-align: left;">This is one of my very favorite recipes I have made! The salad is so refreshing and perfect for a light, summery side dish!</p>
 
     <hr />
 
-    <h2 style="text-align: left;">Materials and Ingredients Needed</h2>
+    <h2 style="text-align: center;">Materials and Ingredients Needed</h2>
 
-    <ol>
+    <ol style="text-align: center;">
         <li>Big mixing or salad bowl</li>
         <li>Knife</li>
         <li>1 garlic clove</li>
