--- a/WebDesignHomework/Assignment9/gallery.html
+++ b/WebDesignHomework/Assignment9/gallery.html
@@ -10,7 +10,7 @@
 
 <h1 style="text-align: center;">Cooking With Kate!</h1>
 
-<footer>
+<footer style="text-align: center;">
     <p>&copy; 2024 Cooking With Kate • Enjoy Cooking</p>
 </footer>
 </body>
