--- a/WebDesignHomework/Assignment9/gallery.html
+++ b/WebDesignHomework/Assignment9/gallery.html
@@ -10,6 +10,9 @@
 
 <h1 style="text-align: center;">Cooking With Kate!</h1>
 
+<a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
+<a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
+
 <footer style="text-align: center;">
     <p>&copy; 2024 Cooking With Kate • Enjoy Cooking</p>
 </footer>
