--- a/WebDesignHomework/Assignment9/gallery.html
+++ b/WebDesignHomework/Assignment9/gallery.html
@@ -12,6 +12,7 @@
 
 <a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
 <a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
+<a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
 
 <footer style="text-align: center;">
     <p>&copy; 2024 Cooking With Kate • Enjoy Cooking</p>
