--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -11,7 +11,8 @@
 <h1 style="text-align: center;">Cooking With Kate!</h1>
 
 <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
-    <a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
+<a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
+<a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
 
     <h2 style="text-align: center;">How to Make a Dilly White Bean Cucumber Salad
     </h2>
