--- a/WebDesignHomework/Assignment9/aboutme.html
+++ b/WebDesignHomework/Assignment9/aboutme.html
@@ -23,6 +23,8 @@
     <img src="images/kitten.jpeg"alt= "holding a kitten" style="width: 30%" style="height: 30%;">
     <img src="images/me.jpeg"alt= "me" style="width: 30%" style="height: 30%;">
     <img src="images/flowers.jpeg"alt= "at the farmers market" style="width: 30%" style="height: 30%;">
+    <img src="images/carter.jpeg"alt= "carter" style="width: 30%" style="height: 30%;">
+
 
 
    <footer style="text-align: center;">
