--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -14,7 +14,7 @@
 <a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
 <a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
 
-    <h2 style="text-align: center;">How to Make a Dilly White Bean Cucumber Salad
+    <h2 style="text-align: left;">How to Make a Dilly White Bean Cucumber Salad
     </h2>
 
     <p style="text-align: left;">This is one of my very favorite recipes I have made! The salad is so refreshing and perfect for a light, summery side dish!</p>
