--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -53,7 +53,7 @@
         Add the beans, cucumber, radishes, dill, and green onions to a large bowl. Add the dressing to the bowl and then mix well until evenly incorporated. Season with additional salt and pepper to taste, if necessary.</p>
         
         <p style="text-align: left;"></p><b>Step 3: Serve</b>
-        Serve immediately, or store in the fridge for 15 to 30 minutes before serving, to allow the flavors to combine. more. Leftovers will keep in the fridge for up to 5 days.</p>
+        Serve immediately, or store in the fridge for 15 to 30 minutes before serving, to allow the flavors to combine more. Leftovers will keep in the fridge for up to 5 days.</p>
 
 <h2 style="text-align: center;">Recipe Notes: White Beans</h2>
         <p style="text-align: left;">I made this salad with Great Northern Beans, which have a soft and creamy texture. Cannelini or Navy Beans will also give you a similar result. This salad can also be made with chickpeas, but will not be as creamy.</p>
