--- a/WebDesignHomework/Assignment9/gallery.html
+++ b/WebDesignHomework/Assignment9/gallery.html
@@ -10,6 +10,18 @@
 
 <h1 style="text-align: center;">Cooking With Kate!</h1>
 
+<style>
+.audio-section {
+    width: 30%; /* Audio takes 1/3 of the width */
+    height: 350px;
+    float: left;
+    margin: 1.66%;
+    padding: 15px;
+    background-color: #f2fcff;
+    box-sizing: border-box;
+    text-align: center;
+</style>
+
 <a style="float: right; padding: 10px" href="howto.html">HOW TO</a>
 <a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
 <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
