--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -15,11 +15,11 @@
     
     <div class="banner">TRAVELOG</div>
 
-<div>
-    <video class="full-width-video" autoplay muted loop>
-        <source src="https://stock.adobe.com/video/aerial-top-view-sea-waves-seamless-loop-on-the-white-sand-beach-wave-after-wave-swept-towards-the-shore-green-sea-white-bubble-waves-and-clear-sand-landscape-paradise-beach/488829746" type="video/mp4">
-    </video>
-</div>
+    <div id="hero-video">
+        <video autoplay muted loop style="width: 100%; height: auto;">
+        <source src="https://v.ftcdn.net/02/19/45/01/240_F_219450108_n8DvHEv84exEWLUyCJoqSk8rhs85Rql5_ST.mp4" type="video/mp4">
+        </video>
+    </div>
 
     <div class="two-column-block">
         <div class="left-section">
