--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -32,13 +32,12 @@
         </div>
     </div>
 
-    <!-- Full-width image section -->
     <div>
         <img class="banner-image" src="images/succulent_candle_topview_banner.jpg">
     </div>
 
     <footer>
-        &copy; 2024 My Inspiration Board
+        &copy; My Travel Blog
     </footer>
 </body>
 </html>
