--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -36,8 +36,10 @@
         <img class="banner-image" src="images/succulent_candle_topview_banner.jpg">
     </div>
 
+    <div>
     <footer>
         &copy; My Travel Blog
     </footer>
+    </div>      
 </body>
 </html>
