--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div>
-        <img class="banner-image" src="images/succulent_candle_topview_banner.jpg">
+        <img class="banner-image" src="https://images.pexels.com/photos/2265876/pexels-photo-2265876.jpeg?auto=compress&cs=tinysrgb&h=627&fit=crop&w=1200">
     </div>
 
     <footer>
