--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -27,8 +27,7 @@
             <p id="quote-author">- RUMI</p>
         </div>
         <div class="right-section">
-            <blockquote>A book is a dream that you hold in your hand.</blockquote>
-            <p id="quote-author">- Neil Gaiman</p>
+            <img src="https://static.vecteezy.com/system/resources/previews/027/958/594/non_2x/travel-plane-airplane-continuous-line-outline-art-illustration-airplane-flight-trip-sketch-icon-doodle-illustration-take-flight-continuous-line-art-discover-essence-of-travel-and-adventure-vector.jpg" style="width: 30%" style="height: 15%;">
         </div>
     </div>
 
