--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -15,10 +15,8 @@
     
     <div class="banner">TRAVELOG</div>
 
-    <div id="hero-video">
-        <video autoplay muted loop style="width: 100%; height: auto;">
-        <source src="https://v.ftcdn.net/04/88/82/97/240_F_488829746_l8GKkfeWEn4bCGmgAN3XouUbCzc2g9jc_ST.mp4" type="video/mp4">
-        </video>
+    <div>
+        <img class="banner-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_IU9dsynVYt_wJh9_WF4S2eZMCNy66Od46_-a1gMB3got5g0je9q93Dk6TxUPTMaQbFk&usqp=CAU">
     </div>
 
     <div class="two-column-block">
