--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -16,7 +16,7 @@
     <div class="banner">TRAVELOG</div>
 
     <div>
-        <img class="banner-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_IU9dsynVYt_wJh9_WF4S2eZMCNy66Od46_-a1gMB3got5g0je9q93Dk6TxUPTMaQbFk&usqp=CAU">
+        <img class="banner-image" src="https://file.aimcontent.co/BrandAge/images/content/1B753C8-AECC2F7-3DC006C.jpg">
     </div>
 
     <div class="two-column-block">
