--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">TRAVEL</a></li>
+            <li><a href="index.html">TRAVEL WITH ME</a></li>
         </ul>
     </nav>
     
