--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -25,7 +25,7 @@
             <p id="quote-author">- RUMI</p>
         </div>
         <div class="right-section">
-            <img src="https://static.vecteezy.com/system/resources/previews/027/958/594/non_2x/travel-plane-airplane-continuous-line-outline-art-illustration-airplane-flight-trip-sketch-icon-doodle-illustration-take-flight-continuous-line-art-discover-essence-of-travel-and-adventure-vector.jpg" style="width: 100%" style="height: 100%;">
+            <img src="https://static.vecteezy.com/system/resources/previews/027/958/594/non_2x/travel-plane-airplane-continuous-line-outline-art-illustration-airplane-flight-trip-sketch-icon-doodle-illustration-take-flight-continuous-line-art-discover-essence-of-travel-and-adventure-vector.jpg" style="width: 2in" style="height: 2in;">
         </div>
     </div>
 
