--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -21,8 +21,8 @@
 
     <div class="two-column-block">
         <div class="left-section">
-            <blockquote>Let the beauty of what you love be what you do.</blockquote>
-            <p id="quote-author">- RUMI</p>
+            <blockquote>The world is a book and those who do not travel read only one page.</blockquote>
+            <p id="quote-author">- ST. AUGUSTINE</p>
         </div>
         <div class="right-section">
             <img src="https://static.vecteezy.com/system/resources/previews/027/958/594/non_2x/travel-plane-airplane-continuous-line-outline-art-illustration-airplane-flight-trip-sketch-icon-doodle-illustration-take-flight-continuous-line-art-discover-essence-of-travel-and-adventure-vector.jpg" style="width: 2in" style="height: 2in;">
