--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div>
-        <img src="https://images.pexels.com/photos/2265876/pexels-photo-2265876.jpeg?auto=compress&cs=tinysrgb&h=627&fit=crop&w=1200">
+        <img class="banner-image" src="https://images.pexels.com/photos/2265876/pexels-photo-2265876.jpeg?auto=compress&cs=tinysrgb&h=627&fit=crop&w=1200">
     </div>
 
     <footer>
