--- a/WebDesignHomework/assignment10/index.html
+++ b/WebDesignHomework/assignment10/index.html
@@ -25,7 +25,7 @@
             <p id="quote-author">- ST. AUGUSTINE</p>
         </div>
         <div class="right-section">
-            <img src="https://www.pngfind.com/pngs/m/43-433925_vector-jet-black-and-white-png-free-outline.png" style="width: 2in" style="height: 2in;">
+            <img src="https://t4.ftcdn.net/jpg/02/74/84/83/240_F_274848331_j2f9quesTgKfuUMfIynhyk4gCgY7Ox5x.jpg" style="width: 2in" style="height: 2in;">
         </div>
     </div>
 
