--- a/WebDesignHomework/Assignment9/howto.html
+++ b/WebDesignHomework/Assignment9/howto.html
@@ -10,7 +10,7 @@
 
 <h1 style="text-align: center;">Cooking With Kate!</h1>
 
-<h1 class="h1">Josefin Sans</h1>
+<p class="p1">sans-serif</p>
  
 <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
 <a style="float: right; padding: 10px" href="aboutme.html">ABOUT ME</a>
