--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -21,16 +21,19 @@
         <div class="column">
             <h2>Column 1</h2>
             <p>This is content for the first column. You can add more text, images, or other elements here.</p>
+            <hr> <!-- Divider -->
         </div>
         
         <div class="column">
             <h2>Column 2</h2>
             <p>This is content for the second column. Use this space to convey your information in an organized manner.</p>
+            <hr> <!-- Divider -->
         </div>
 
         <div class="column">
             <h2>Column 3</h2>
             <p>This is content for the third column. Each column can contain different types of content.</p>
+            <hr> <!-- Divider -->
         </div>
 
         <div class="img-side">
