--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-.header {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-.footer {
-  background-color: #f1f1f1;
-  padding: 10px;
-  text-align: center;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3 Column Layout with Images</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Welcome to My Website</h1>
+        <p>Your subtitle or description can go here.</p>
+    </header>
+
+    <div class="container">
+        <div class="img-side">
+            <img src="left-image.jpg" alt="Left Image" style="width: 100%; height: auto; border-radius: 5px;">
+            <p>Description for the left image.</p>
+        </div>
+
+        <div class="column">
+            <h2>Column 1</h2>
+            <p>This is content for the first column. You can add more text, images, or other elements here.</p>
+            <hr> <!-- Divider -->
+        </div>
+        
+        <div class="column">
+            <h2>Column 2</h2>
+            <p>This is content for the second column. Use this space to convey your information in an organized manner.</p>
+            <hr> <!-- Divider -->
+        </div>
+
+        <div class="column">
+            <h2>Column 3</h2>
+            <p>This is content for the third column. Each column can contain different types of content.</p>
+            <hr> <!-- Divider -->
+        </div>
+
+        <div class="img-side">
+            <img src="right-image.jpg" alt="Right Image" style="width: 100%; height: auto; border-radius: 5px;">
+            <p>Description for the right image.</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+</body>
+</html>
